HelloUltraviolet/Fixtures/RejectedSource/Expressions/CastAndTransmuteExpressionsDiagnostic/Source/Main.uv
//! Rejected expression specimen for cast and transmute diagnostic coverage.

public procedure castAndTransmuteExpressionsDiagnosticReference() -> f32 {
    return true as f32
}
